--- a/docs/petstore.yaml
+++ b/docs/petstore.yaml
@@ -8,7 +8,7 @@ info:
   x-metadata: 
     owner: 'Roman Sainchuk'
   description: |
-    This is a sample server Petstore server.gfg
+    This is a sample server Petstore server.sdsdgfg
     You can find out more about Swagfdfgdfdfer atasda
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).
     For this sample, you can use the api key `special-key` to test the authorization filters.
