--- a/docs/petstore.yaml
+++ b/docs/petstore.yaml
@@ -11,7 +11,7 @@ info:
     This is a sample server Petstore
     You can find out more about Swagfdfgdfdfer dfatasda
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).
-    For this sample, you can use the api key `special-key` to test the authorization filters.
+    For this sample, you can use the api key `f special-key` to test the authorization filters.
 
     # Introduction
     This API is documented in **OpenAPI format** and is based on
