--- a/docs/petstore.yaml
+++ b/docs/petstore.yaml
@@ -9,7 +9,7 @@ info:
     owner: 'TeamB'
   description: |
     This is a sample server Petstore
-    You can find out more about Swagfdfgdfdfer
+    You can find out more about Swagfdfgdfdferf
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).
     For this sample, you can use the api key `special-key` to test the authorization filters.
 
