--- a/docs2/petstore.yaml
+++ b/docs2/petstore.yaml
@@ -7,7 +7,7 @@ servers:
 info:
   x-metadata:
     owner: "Roman Sainchuk"
-    team: "TeamA"
+    team: "TeamB"
   description: |
     This is a sample server Petstore
     You can find out more about Swagger at
