--- a/docs2/petstore.yaml
+++ b/docs2/petstore.yaml
@@ -11,7 +11,7 @@ info:
   description: |
     This is a sample server Petstore
     You can find out more about Swagger at
-    [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).
+    [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/). sfgfd
     For this sample, you can use the api key `special-key` to test the authorization filters.
 
     # Introduction
