--- a/docs3/s-petstore.yaml
+++ b/docs3/s-petstore.yaml
@@ -10,7 +10,7 @@ info:
     team: "TeamB"
   description: |
     This is a sample server Petstore
-    You can find out more about Swagger at3dfgdfdfgd
+    You can find out more about Swagger at3dfgdfdfg
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/). sfgfd
     For this sample, you can use the api key `special-key` to test the authorization filters.
 
