--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -24,9 +24,9 @@ jobs:
           --organization default \
           --project 'cicd-pushes' \
           --mountPath 'docs/remotes/cicd' \
-          --branch ${{ github.ref_name }} \
+          --branch "${{ github.ref_name }}" \
           --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
-          --message ${{ github.event.head_commit.message }} \
+          --message "${{ github.event.head_commit.message }}" \
           --domain 'https://app.lab1.blueharvest.cloud'
         env:
           REDOCLY_AUTHORIZATION: ${{ secrets.REDOCLY_AUTHORIZATION }}
