--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -37,6 +37,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: install-and-push
     steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: "npm"
+      - name: Install dependencies
+        run: npm ci
+        env:
+          CI: true
       - name: Wait for deployment
         run: |-
           npm run push-status 
@@ -47,4 +56,3 @@ jobs:
           --domain 'https://app.lab1.blueharvest.cloud'
         env:
           REDOCLY_AUTHORIZATION: ${{ secrets.REDOCLY_AUTHORIZATION }}
-    
