--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "push": "redocly push"
+    "push": "redocly push",
+    "push-status": "redocly push-status"
   },
   "dependencies": {
     "@redocly/cli": "file:redocly-cli.tgz"
