--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -43,16 +43,30 @@ jobs:
           node-version: 18
           cache: "npm"
       - name: Install dependencies
-        run: npm ci
+        run: |-
+          apt-get update && apt-get install -y jq;
+          npm ci;
         env:
           CI: true
       - name: Wait for deployment
         run: |-
-          npm run push-status -- \
+          DEPLOY_STATUS=`npm run push-status -- \
           --organization default \
           --project 'cicd-pushes' \
           --pushId "${{needs.install-and-push.outputs.pushId}}" \
           --format json \
-          --domain 'https://app.lab1.blueharvest.cloud'
+          --domain 'https://app.lab1.blueharvest.cloud' | jq '.status.deploy.status'`
+
+          while [ "$DEPLOY_STATUS" != "SUCCEEDED" ||  "$DEPLOY_STATUS" != "FAILED" ]; do
+            printf "🕒 Waiting for deployment to finish\n"
+            sleep 5
+
+            DEPLOY_STATUS=`npm run push-status -- \
+            --organization default \
+            --project 'cicd-pushes' \
+            --pushId "${{needs.install-and-push.outputs.pushId}}" \
+            --format json \
+            --domain 'https://app.lab1.blueharvest.cloud' | jq '.status.deploy.status'`
+          done
         env:
           REDOCLY_AUTHORIZATION: ${{ secrets.REDOCLY_AUTHORIZATION }}
