--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -50,14 +50,24 @@ jobs:
           CI: true
       - name: Wait for deployment
         run: |-
-          DEPLOY_STATUS=`npm run -s push-status -- \
+          PUSH=`npm run -s push-status -- \
           --organization default \
           --project 'cicd-pushes' \
           --pushId "${{needs.install-and-push.outputs.pushId}}" \
           --format json \
-          --domain 'https://app.lab1.blueharvest.cloud' | jq '.status.deploy.status'`
+          --domain 'https://app.lab1.blueharvest.cloud'`
 
-          while [[ "$DEPLOY_STATUS" != "SUCCEEDED" ||  "$DEPLOY_STATUS" != "FAILED" ]]; do
+          HAS_CHANGES=`echo $PUSH | jq '.hasChanges'`;
+          OUTDATED=`echo $PUSH | jq '.isOutdated'`;
+
+          if [[ "$HAS_CHANGES" == "true" && "$OUTDATED" == "false" ]]; then
+            echo "🚀 Deployment is up to date"
+            exit 0
+          fi
+
+          DEPLOY_STATUS=`echo $PUSH | jq '.status.deploy.status'`
+
+          while [[ "$DEPLOY_STATUS" != "SUCCEEDED" || "$DEPLOY_STATUS" != "FAILED" ]]; do
             printf "🕒 Waiting for deployment to finish\n"
             sleep 5
 
