--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -67,7 +67,7 @@ jobs:
 
           DEPLOY_STATUS=`echo $PUSH | jq '.status.deploy.status'`
 
-          while [[ "$DEPLOY_STATUS" != "SUCCEEDED" || "$DEPLOY_STATUS" != "FAILED" ]]; do
+          while [[ ("$DEPLOY_STATUS" != "SUCCEEDED") || ("$DEPLOY_STATUS" != "FAILED") ]]; do
             printf "🕒 Waiting for deployment to finish. Current status: "$DEPLOY_STATUS"\n"
             sleep 5
 
