--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |-
           echo "pushId=`npm run -s push -- docs/s-petstore.yaml \
           --organization default \
-          --project 'cicd-pushes' \
+          --project 'pushes' \
           --mountPath 'docs/remotes/cicd' \
           --branch "${{ github.ref_name }}" \
           # --namespace "${{ github.event.repository.owner.login }}" \
@@ -56,7 +56,7 @@ jobs:
           get_push () {
             npm run -s push-status -- \
               --organization default \
-              --project 'cicd-pushes' \
+              --project 'pushes' \
               --pushId "${{needs.install-and-push.outputs.pushId}}" \
               --format json \
               --domain 'https://app.lab1.blueharvest.cloud'
