--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Push to remote
         id: push
         run: |-
-          echo "pushId=`npm run -s push -- docs/s-petstore.yaml \
+          pushId=`npm run -s push -- docs/s-petstore.yaml \
           --organization default \
           --project 'pushes' \
           --mountPath 'docs/remotes/cicd' \
@@ -33,7 +33,10 @@ jobs:
           --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
           --message "${{ github.event.head_commit.message }}" \
           # --commitUrl "${{ github.event.head_commit.url }}" \
-          --domain 'https://app.lab1.blueharvest.cloud'`" >> "$GITHUB_OUTPUT"
+          --domain 'https://app.lab1.blueharvest.cloud'`
+
+          echo "pushId=$pushId" >> "$GITHUB_OUTPUT"
+          echo "Push ID: $pushId"
         env:
           REDOCLY_AUTHORIZATION: ${{ secrets.REDOCLY_AUTHORIZATION }}
   wait-for-deploy:
