--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -27,6 +27,7 @@ jobs:
           --organization default \
           --project 'pushes' \
           --mountPath 'docs/remotes/cicd' \
+          --isMainBranch true \
           --branch "${{ github.ref_name }}" \
           --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
           --message "${{ github.event.head_commit.message }}" \
