--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -23,11 +23,25 @@ jobs:
       - name: Push to remote
         id: push
         run: |-
+          if [[ -n "${{github.event.repository.master_branch}}" ]]; then
+            MAIN_BRANCH="${{github.event.repository.master_branch}}"
+          fi
+
+          if [[ -n "${{github.event.repository.default_branch}}" ]]; then
+            MAIN_BRANCH="${{github.event.repository.master_branch}}"
+          fi
+
+          IS_MAIN_BRANCH=false
+
+          if [[ -n $MAIN_BRANCH && $MAIN_BRANCH == "${{ github.ref_name }}" ]]; then
+            IS_MAIN_BRANCH=true
+          fi
+
           pushId=`npm run -s push -- docs/s-petstore.yaml \
           --organization default \
           --project 'pushes' \
           --mountPath 'docs/remotes/cicd' \
-          --isMainBranch true \
+          --isMainBranch $IS_MAIN_BRANCH \
           --branch "${{ github.ref_name }}" \
           --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
           --message "${{ github.event.head_commit.message }}" \
