--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -44,12 +44,12 @@ jobs:
           --isMainBranch $IS_MAIN_BRANCH \
           --branch "${{ github.ref_name }}" \
           --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
+          --commitUrl "${{ github.event.head_commit.url }}" \
+          --namespace "${{ github.event.repository.owner.login }}" \
+          --repository "${{ github.event.repository.name }}" \
           --message "${{ github.event.head_commit.message }}" \
           --domain 'https://app.lab1.blueharvest.cloud'`
 
-          # --commitUrl "${{ github.event.head_commit.url }}" \
-          # --namespace "${{ github.event.repository.owner.login }}" \
-          # --repository "${{ github.event.repository.name }}" \
 
           echo "pushId=$pushId" >> "$GITHUB_OUTPUT"
           echo "Push ID: $pushId"
