--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,7 +39,7 @@ jobs:
 
           pushId=`npm run -s push -- docs/s-petstore.yaml \
           --organization default \
-          --project 'pushes' \
+          --project 'pushes-demo' \
           --mountPath 'docs/remotes/cicd' \
           --isMainBranch $IS_MAIN_BRANCH \
           --branch "${{ github.ref_name }}" \
