--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,7 +39,7 @@ jobs:
 
           pushId=`npm run -s push -- docs/s-petstore.yaml \
           --organization default \
-          --project 'pushes-demo' \
+          --project 'push-rework' \
           --mountPath 'docs/remotes/cicd' \
           --isMainBranch $IS_MAIN_BRANCH \
           --branch "${{ github.ref_name }}" \
@@ -72,54 +72,12 @@ jobs:
           CI: true
       - name: Wait for deployment
         run: |-
-          get_push () {
-            npm run -s push-status -- \
+        
+            npm run -s push-status "${{needs.install-and-push.outputs.pushId}}" -- \
               --organization default \
-              --project 'pushes-demo' \
-              --pushId "${{needs.install-and-push.outputs.pushId}}" \
-              --format json \
-              --domain 'https://app.lab1.blueharvest.cloud'
-          }
-
-          poll_status () {
-            local PUSH_RESPONSE=$1
-            local JQ_EXPR=$2
-            local DEPLOY_STATUS=`echo $PUSH_RESPONSE | jq -r "$JQ_EXPR.status"`
-            local BUILD_TYPE=$3
-
-            while [[ $DEPLOY_STATUS != "SUCCEEDED" && $DEPLOY_STATUS != "FAILED" ]]; do
-              printf "🕒 Waiting for $BUILD_TYPE deployment to finish. Current status: $DEPLOY_STATUS\n"
-              sleep 5
-
-              PUSH_RESPONSE=`get_push`;
-              DEPLOY_STATUS=`echo $PUSH_RESPONSE | jq -r "$JQ_EXPR.status"`
-            done
-
-            DEPLOY_URL=`echo $PUSH_RESPONSE | jq -r "$JQ_EXPR.url"`
-
-            if [[ $DEPLOY_STATUS == "FAILED" ]]; then
-              echo "❌ ${BUILD_TYPE^} deployment failed. Url: $DEPLOY_URL"
-              exit 1
-            fi
-
-            echo "🚀 ${BUILD_TYPE^} deployment succeeded. Url: $DEPLOY_URL"
-          }
-
-          PUSH=`get_push`;
-          HAS_CHANGES=`echo $PUSH | jq '.hasChanges'`;
-          OUTDATED=`echo $PUSH | jq '.isOutdated'`;
-          IS_MAIN_BRANCH=`echo $PUSH | jq '.isMainBranch'`;
-
-          if [[ $HAS_CHANGES == "false" || $OUTDATED == "true" ]]; then
-            echo "🚀 Deployment is up to date"
-            exit 0
-          fi
-
-          poll_status "$PUSH" '.status.preview.deploy' 'preview'
-
-          if [[ $IS_MAIN_BRANCH == "true" ]]; then
-            poll_status "$PUSH" '.status.production.deploy' 'production'  
-          fi
+              --project 'push-rework' \
+              --domain 'https://app.lab1.blueharvest.cloud' \
+              --wait
 
         env:
           REDOCLY_AUTHORIZATION: ${{ secrets.REDOCLY_AUTHORIZATION }}
