--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -48,9 +48,7 @@ jobs:
           --namespace "${{ github.event.repository.owner.login }}" \
           --repository "${{ github.event.repository.name }}" \
           --message "${{ github.event.head_commit.message }}" \
-          --domain 'https://app.lab1.blueharvest.cloud'` \
-          --wait-for-deployment
-
+          --domain 'https://app.lab1.blueharvest.cloud'` --wait-for-deployment
 
           echo "pushId=$pushId" >> "$GITHUB_OUTPUT"
           echo "Push ID: $pushId"
