--- a/docs/s-petstore.yaml
+++ b/docs/s-petstore.yaml
@@ -13,7 +13,9 @@ info:
     You can find out more about Swagger at ----------------/////
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/). sfgf
     For this sample, you can use the api key `special-key` to test the authorization filters.
-
+    
+    lorem test
+    
     # Introduction
     This API is documented in **OpenAPI format** and is based on
     API syntax we use a few [vendor extensions](https://github.com/Redocly/redoc/blob/master/docs/redoc-vendor-extensions.md).
