update pet store

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,7 +39,7 @@ jobs:
 
           npm run -s push -- docs/s-petstore.yaml \
           --organization default \
-          --project 'cli-push-test' \
+          --project 'push-rework' \
           --mountPath 'docs/remotes/cicd' \
           --isMainBranch $IS_MAIN_BRANCH \
           --branch "${{ github.ref_name }}" \
