--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -39,7 +39,7 @@ jobs:
 
           npm run -s push -- docs/s-petstore.yaml \
           --organization default \
-          --project 'cli-push-test' \
+          --project 'push-rework' \
           --mountPath 'docs/remotes/cicd' \
           --isMainBranch $IS_MAIN_BRANCH \
           --branch "${{ github.ref_name }}" \
@@ -47,6 +47,7 @@ jobs:
           --commitUrl "${{ github.event.head_commit.url }}" \
           --namespace "${{ github.event.repository.owner.login }}" \
           --repository "${{ github.event.repository.name }}" \
+          --createdAt "${{ github.event.head_commit.timestamp }}" \
           --message "${{ github.event.head_commit.message }}" \
           --domain 'https://app.lab1.blueharvest.cloud' \
           --wait-for-deployment
