--- a/docs/s-petstore.yaml
+++ b/docs/s-petstore.yaml
@@ -14,10 +14,7 @@ info:
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/). sfgf
     For this sample, you can use the api key `special-key` to test the authorization filters.
     
-    # Introduction
-    This API is documented in **OpenAPI format** and is based on
-    API syntax we use a few [vendor extensions](https://github.com/Redocly/redoc/blob/master/docs/redoc-vendor-extensions.md).
-
+   sdfsaf
     # OpenAPI Specification
     This API is documented in **OpenAPI format** and is based on
     [Petstore sample](http://petstore.swagger.io/) provided by [swagger.io](http://swagger.io) team.
