--- a/docs/remotes/git/petstore.yaml
+++ b/docs/remotes/git/petstore.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.0"
 info:
   version: 1.0.0
-  title: Swagger Petstore V1-2
+  title: Swagger Petstore V1-2-1
   license:
     name: MIT
 servers:
