--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,55 +1,34 @@
-name: Push to remote
+name: Push to Redocly
 
 on:
   push:
     branches:
-      - "**"
+      - '**'
 
 jobs:
-  install-and-push:
+  push:
     runs-on: ubuntu-latest
-    outputs:
-      pushId: ${{ steps.push.outputs.pushId }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: "npm"
-      - name: Install dependencies
-        run: npm ci
-        env:
-          CI: true
-      - name: Push to remote and wait for deployment
-        id: push
+          node-version: 20.4.0
+          cache: 'npm'
+      - name: Push files and wait for deployment
         run: |-
-          if [[ -n "${{github.event.repository.master_branch}}" ]]; then
-            MAIN_BRANCH="${{github.event.repository.master_branch}}"
-          fi
-
-          if [[ -n "${{github.event.repository.default_branch}}" ]]; then
-            MAIN_BRANCH="${{github.event.repository.master_branch}}"
-          fi
-
-          IS_MAIN_BRANCH=false
-
-          if [[ -n $MAIN_BRANCH && $MAIN_BRANCH == "${{ github.ref_name }}" ]]; then
-            IS_MAIN_BRANCH=true
-          fi
-
-          npm run -s push -- docs/s-petstore.yaml \
-          --organization default \
-          --project 'push-rework' \
-          --mountPath 'docs/remotes/cicd' \
-          --isMainBranch $IS_MAIN_BRANCH \
-          --branch "${{ github.ref_name }}" \
-          --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
-          --commitUrl "${{ github.event.head_commit.url }}" \
-          --namespace "${{ github.event.repository.owner.login }}" \
-          --repository "${{ github.event.repository.name }}" \
-          --createdAt "${{ github.event.head_commit.timestamp }}" \
-          --message "${{ github.event.head_commit.message }}" \
-          --domain 'https://app.lab1.blueharvest.cloud' \
-          --wait-for-deployment
+          npx @redocly/cli push docs/s-petstore.yaml \
+              --organization "default" \
+              --project "push-rework" \
+              --mount-path "/docs/remotes/cicd" \
+              --default-branch "${{ github.event.repository.default_branch || github.event.repository.master_branch }}" \
+              --branch "${{ github.ref_name }}" \
+              --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
+              --commit-url "${{ github.event.head_commit.url }}" \
+              --namespace "${{ github.event.repository.owner.login }}" \
+              --repository "${{ github.event.repository.name }}" \
+              --created-at "${{ github.event.head_commit.timestamp }}" \
+              --message "${{ github.event.head_commit.message }}" \
+              --domain "http://localhost" \
+              --wait-for-deployment
         env:
           REDOCLY_AUTHORIZATION: ${{ secrets.REDOCLY_AUTHORIZATION }}
