--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -16,13 +16,14 @@ jobs:
           cache: 'npm'
       - name: Push files and wait for deployment
         run: |-
-          npx @redocly/cli push docs/s-petstore.yaml \
+          npx @redocly/cli push docs/petstore.yaml \
               --organization "default" \
               --project "push-rework" \
               --mount-path "/docs/remotes/cicd" \
               --default-branch "${{ github.event.repository.default_branch || github.event.repository.master_branch }}" \
               --branch "${{ github.ref_name }}" \
               --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
+              --commit-sha "${{ github.event.head_commit.sha }}" \
               --commit-url "${{ github.event.head_commit.url }}" \
               --namespace "${{ github.event.repository.owner.login }}" \
               --repository "${{ github.event.repository.name }}" \
