--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -23,7 +23,7 @@ jobs:
               --default-branch "${{ github.event.repository.default_branch || github.event.repository.master_branch }}" \
               --branch "${{ github.ref_name }}" \
               --author "${{ github.event.head_commit.author.name }} <${{ github.event.head_commit.author.email }}>" \
-              --commit-sha "${{ github.event.head_commit.sha }}" \
+              --commit-sha "${{ github.event.head_commit.id }}" \
               --commit-url "${{ github.event.head_commit.url }}" \
               --namespace "${{ github.event.repository.owner.login }}" \
               --repository "${{ github.event.repository.name }}" \
