--- a/docs/petstore.yaml
+++ b/docs/petstore.yaml
@@ -9,7 +9,7 @@ info:
     owner: 'Roman Sainchuk'
   description: |
     This is a sample server Petstore server.
-    You can find out more about Swagger at --
+    You can find out more about Swagger at ---
     [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).
     For this sample, you can use the api key `special-key` to test the authorization filters.
 
